# LearningOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/stb/: info.txt
res/shader/: basic.frag  basic.vert  red.frag
res/textures/: info.txt
src/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp  window_processing.cpp  window_processing.h
